--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -17,6 +17,7 @@ jobs:
         MODE: 'both' # Either 'mirror', 'get_status', or 'both'
         GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
         FORCE_PUSH: "true"
+        PRUNE: "false"
         GITLAB_HOSTNAME: "codebase.helmholtz.cloud"
         GITLAB_PROJECT_ID: "6234"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -30,6 +31,7 @@ jobs:
         MODE: 'mirror' # Either 'mirror', 'get_status', or 'both'
         GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
         FORCE_PUSH: "true"
+        PRUNE: "false"
         GITLAB_HOSTNAME: "codebase.helmholtz.cloud"
         GITLAB_PROJECT_ID: "6234"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -45,6 +47,7 @@ jobs:
         MODE: 'get_status' # Either 'mirror', 'get_status', or 'both'
         GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
         FORCE_PUSH: "true"
+        PRUNE: "false"
         GITLAB_HOSTNAME: "codebase.helmholtz.cloud"
         GITLAB_PROJECT_ID: "6234"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
